[ATK] Changing the mapping of ARIA rowheader and columnheader into respective ATK roles. https://bugs.webkit.org/show_bug.cgi?id=136150

Patch by Andrzej Badowski <a.badowski@samsung.com> on 2014-10-10
Reviewed by Chris Fleizach.

Source/WebCore:

Expose ColumnHeaderRole and RowHeaderRole objects into ATK.

Test: accessibility/table-roles-hierarchy.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):
Platforms based on ATK: added distinction of roles for the <th> elements.
* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::determineAccessibilityRole):
Platforms based on ATK: the return value is determined in the ancestor.
* accessibility/atk/AccessibilityObjectAtk.cpp:
(WebCore::AccessibilityObject::accessibilityPlatformIncludesObject):
In addition to CellRole also included ColumnHeaderRole and RowHeaderRole.
* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(atkRole):
Changing the mapping of ARIA rowheader and columnheader into respective ATK roles.
(getInterfaceMaskFromObject):
In addition to CellRole also included ColumnHeaderRole and RowHeaderRole.

LayoutTests:

Minor changes in the roles-exposed test to check the mapping of rowheader and columnheader.
As a result of changes in the code test also shows the changes for the <th> element.
Changes expectations so that they cover propoer mapping of RowHeaderRole and ColumnHeaderRole.

* accessibility/aria-tables-expected.txt:
* accessibility/roles-exposed.html:
* accessibility/table-roles-hierarchy-expected.txt: Added.
* accessibility/table-roles-hierarchy.html: Added.
* platform/efl/accessibility/roles-exposed-expected.txt: Added.
* platform/efl/accessibility/table-attributes-expected.txt:
* platform/efl/accessibility/table-cells-expected.txt:
* platform/efl/accessibility/table-detection-expected.txt:
* platform/gtk/accessibility/roles-exposed-expected.txt: Added.
* platform/gtk/accessibility/table-attributes-expected.txt:
* platform/gtk/accessibility/table-cells-expected.txt:
* platform/gtk/accessibility/table-sections-expected.txt:
* platform/mac/accessibility/aria-tables-expected.txt: Copied from LayoutTests/accessibility/aria-tables-expected.txt.
* platform/mac/accessibility/table-roles-hierarchy-expected.txt: Added.

Canonical link: https://commits.webkit.org/155444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174567 268f45cc-cd09-0410-ab3c-d52691b4dbfc